# stylized_logger

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compiler.sh
bash/: log_and_style.sh
include/ramrod/: colors.h  console.h  log.h  log_attention.h  log_base.h  log_error.h  log_format.h  log_good.h  log_ostream.h  log_perror.h  log_types.h  log_warning.h
include/ramrod/console/: attention.h  clean.h  colors.h  cout.h  endl.h  error.h  flush.h  format.h  perror.h  printer.h  regular.h  types.h  warning.h
include/ramrod/log/: Base.hpp  BaseHeaderless.hpp  Debug.hpp  Endl.hpp  Enumerators.hpp  Error.hpp  File.hpp  Info.hpp  Logger.hpp  Output.hpp  OutputError.hpp  OutputFile.hpp  OutputFileConsole.hpp  Verbose.hpp  Warning.hpp  Writer.hpp  WriterCerr.hpp  WriterFile.hpp  WriterFileCerr.hpp  WriterFileCout.hpp
src/ramrod/: console.cpp  log.cpp  log_attention.cpp  log_base.cpp  log_error.cpp  log_format.cpp  log_good.cpp  log_ostream.cpp  log_perror.cpp  log_warning.cpp
src/ramrod/console/: attention.cpp  clean.cpp  cout.cpp  endl.cpp  error.cpp  flush.cpp  format.cpp  perror.cpp  printer.cpp  regular.cpp  warning.cpp
src/ramrod/log/: Base.cpp  BaseHeaderless.cpp  Constants.hpp  Debug.cpp  Endl.cpp  Error.cpp  File.cpp  Info.cpp  Logger.cpp  Output.cpp  OutputError.cpp  OutputFile.cpp  OutputFileConsole.cpp  Verbose.cpp  Warning.cpp  Writer.cpp  WriterCerr.cpp  WriterFile.cpp  WriterFileCerr.cpp  WriterFileCout.cpp
tests/: CMakeLists.txt  run_tests.sh  test_base.cpp  test_debug.cpp  test_error.cpp  test_file.cpp  test_info.cpp  test_logger.cpp  test_output.cpp  test_verbose.cpp  test_warning.cpp  test_writer.cpp  test_writer_cerr.cpp  test_writer_file.cpp  test_writer_file_cerr.cpp  test_writer_file_cout.cpp
